--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Import form http://download.savannah.gnu.org/releases/quagga/quagga-1.1.0.tar.gz
+
 Quagga is free software that manages various IPv4 and IPv6 routing
 protocols.
 
